--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 		<link rel="stylesheet" type="text/css" href="css/slider.css"/>
 		<link rel="stylesheet" type="text/css" href="style.css"/>
 		<link rel="stylesheet" type="text/css" href="responsive.css"/>
-		<script src="https://oss.maxcdn.com/html5shiv/3.7.3/html5shiv.min.js"></script>
+		<script src="//html5shiv.googlecode.com/svn/trunk/html5.js"></script> 
 		<script src="js/selectnav.min.js"></script>
 		<script src="js/ready.js"></script>
 		<script>
